# LexicalAnalysis

./: CMakeLists.txt  README.md  Scanner.cpp  Scanner.h  Token.h  automaton.json  generate_header.py  header.cpp  header.h  header.template  main.cpp  main.txt  token_table.tex
exemplos/: serie_fibonacci.agrvai  shell_sort.agrvai
res/: automaton.json  source.template
scripts/: generate_header.py  run_examples.bat
tex/: analisador_lexico.tex  especificacao_da_linguagem.tex  especificacao_dos_tokens.tex  estrutura_basica.agrvai  keywords_table.tex  main.aux  main.tex  regex_table.tex  token_table.aux  token_table.tex
tex/exemplos_programas/: ola_mundo.agrvai  ola_mundo.agrvai.out  serie_fibonacci.agrvai  serie_fibonacci.agrvai.out  shell_sort.agrvai  shell_sort.agrvai.out
tex/secoes/: especificacao_de_tipos.tex  exemplos_programas.tex  funcoes.tex  instrucoes.tex
